--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,12 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="skins.css" />
+    <link rel="stylesheet" href="skins.css">
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
-      src="https://kit.fontawesome.com/6fcb08b902.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/6fcb08b902.js" crossorigin="anonymous"></script>
   </body>
 </html>
